# BK3231S_cmake_test

./: BK3431S.ld  CMakeLists.txt  README.md  prepare_image.py
include/: include.h
include/App/: DeviceBtj_Stack_Sdpdb.h
include/Core/bt/include/: bt_mini_sched.h
include/Core/btj_src/include/: DeviceBtj.h  DeviceBtj_Adapter.h  DeviceBtj_Service.h  DeviceBtj_Stack_Hci_All.h  DeviceBtj_Stack_Hci_Cmd.h  DeviceBtj_Stack_Hci_Evt.h  DeviceBtj_Stack_Hid.h  DeviceBtj_Stack_L2c.h  DeviceBtj_Stack_Rfc.h  DeviceBtj_Stack_Sdp.h
include/Core/hc/include/: hci_generic.h
include/Core/sys/include/: sys_config.h  sys_features.h  sys_types.h
include/Core/transport/include/: tra_uart_impl.h
include/Driver/include/: driver_flash.h  driver_spi.h
src/: bootstrap.S
src/App/: DeviceBtj_Handler.c  keyboard.c  main.c
src/Driver/: driver_flash.c  driver_timer.c  driver_uart.c  driver_xvr.c
src/hal/prth_chimera/hw/include/: hw_leds.h
src/hal/prth_chimera/sys/: sys_irq.c  sys_irq_aeb1.c  sys_irq_chimera.c  sys_power.c
src/hal/prth_chimera/sys/include/: sys_hal_config.h  sys_irq.h  sys_irq_chimera_impl.h
